Implement advanced task features: filtering, labels, priorities, reminders, and subtasks.